2004/01/09 14:33 (-0500) rwmcfa1

	* AUTHORS, Gtk2.pm, README: mailing list addr correction

2004/01/09 06:19 (+0100) kaffeetisch

	* xs/GtkAccelGroup.xs: Don't unref the closure in connect_by_path.
	Make Gtk2::Accelerator::get_default_mod_mask return a
	GdkModifierType.  Add a class argument to
	Gtk2::Accelerator::valid.

	* xs/GtkSelection.xs: The flags member of GtkTargetEntry's is a
	GtkTargetFlags not an UV.  Move Gtk2::Selection::remove_all to the
	proper namespace.

	* xs/GtkWindow.xs: Move the window group methods into the proper
	namespace.

2004/01/08 18:55 (-0500) rwmcfa1

	* xs/GdkWindow.xs: fixed bug found in test branch where attribute_mask
	was filled with random garbage, should of been initialized in
	SvGdkWindowAttrReal.

2004/01/08 18:55 (-0500) rwmcfa1

	* pm/TestHelper.pm: added at_least_version paramter, very useful.

	* t/27.GtkClipboard.t: use ^, to skip unless clipboard will be around.

	* xs/Gtk2.xs: apidoc fix, version_info should of been get_version_info.

2004/01/09 00:47 (+0100) kaffeetisch

	* xs/GdkColor.xs: Add a class argument to Gtk2::Gdk::Colormap::new
	and implement ::get_visual and ::get_screen.

	* xs/GdkWindow.xs: Hush a compiler warning.

	* xs/GtkIconFactory.xs: Bind remove_default.  Provide a default
	value for the detail argument of set_render_icon.

	* Gtk2.pm
	* xs/GtkItemFactory.xs: Implement create_item and create_items in
	XS.  Implement delete_entry, delete_entries, popup_data,
	popup_data_from_widget, and set_translate_func.

	* xs/GtkRc.xs: Implement get_default_files.  Fix
	set_default_files.  Add a class argument to get_style and
	reparse_all_for_settings.  Remove add_widget_name_style,
	add_widget_class_style, and add_class_style since they're
	deprecated.  Comment out find_module_in_path.  Rearrange member
	handling of Gtk2::RcStyle's.  Turn [gs]et_font_desc into
	font_desc.

	* xs/GtkTooltips.xs: In data_get, check for NULL before converting
	struct members to SVs.  Slightly modify apidoc.
